kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curriculum
  labels:
    app: curriculum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curriculum
  template:
    metadata:
      labels:
        app: curriculum
    spec:
      containers:
        - name: app
          image: app
          ports:
            - containerPort: 8080
