kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: curriculum
spec:
  selector:
    app: curriculum
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
